# NumCosmo

./: .clang-format  .flake8  .gitignore  .lcovrc  .mypy.ini  .pre-commit-config.yaml  .project  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  ChangeLog.md  Comparison.ipynb  DEADJOE  Dockerfile  Dockerfile-clmm-jupyter  Dockerfile-jupyter  Dockerfile-prereq  Makefile  Makefile.am  Makefile.decl  NEWS  PITCHME.md  PITCHME.yaml  README  README.md  RELEASE_INSTRUCTIONS.md  RESTRUCTURE_PLAN.md  Resumed_version.ipynb  SECURITY.md  SPECTRAL_INTEGRATION_NOTES.md  TESTING.md  TODO.tasks  aminclude_static.am  autogen.sh  cluster_richness_real_10.00_bs.mset  codecov.yml  (+21 more)
darkenergy/: Makefile.am  darkenergy.c  data_cluster.c  data_cluster.h  de_options.c  de_options.h  gdarkenergy.glade  gdarkenergy.vala  savedata.c  savedata.h
data/: Makefile  Makefile.am  data_observation.sqlite3
docs/: Makefile  Makefile.am  _definitions.qmd  _functions.qmd  _quarto.yml.in  about.qmd  add-py-link.html  addmathjax.pl  addmathjax.py  build_rtd.sh  compiling.asciidoc  compiling.xml  container.css  custom.scss  darkenergy.xml  dependencies.asciidoc  dependencies.xml  download_docs_site.py  download_quarto_freeze.py  gdarkenergy.xml  glib_doc.xml  gobject_introd.xml  index.qmd  install.qmd  introduction.asciidoc  introduction.xml  ipynb-strip-xref.lua  ipynb_to_py.sh  linkgen.lua  manual_head.xml.in  meson.build  numcosmo-docs.sgml  numcosmo-docs.sgml.in  references.asciidoc  references.bib  references.mk4  references.tex  references.xml  refs.xml  theory.tex  (+2 more)
docs/benchmarks/: _setup_models.qmd  ccl_background.qmd  ccl_power_spectrum.qmd  ccl_two_point.qmd  index.qmd  meson.build
docs/examples/: index.qmd  meson.build
docs/images/: meson.build
docs/notes/: _adiabatic.qmd  _numcosmo_py.qmd  meson.build
docs/reference/: meson.build  numcosmo-math.toml.in  numcosmo.toml.in  overview.md  urlmap_mathjax.js
docs/theory/: csq1d.qmd  distances.qmd  fftlog.qmd  galaxy_wl_framework.qmd  halo_density_profile.qmd  index.qmd  meson.build  recombination.qmd  spectral.qmd  transfer_func_eh.qmd  wl_ellipticity.qmd  wl_shape_factor_history.md  wl_shape_marginalization_fixed_quad.qmd  wl_shape_marginalization_series.qmd  wl_surface_mass_density.qmd
docs/tutorials/: index.qmd  meson.build  rosenbrock_simple.md
examples/: Makefile  Makefile.am  README  example_Vexp.py  example_adiab_spec.py  example_apes.py  example_ca.c  example_ca.py  example_ca_sampling.py  example_cbe.py  example_deceleration_function.py  example_diff.py  example_epdf1d.py  example_evolaa_inf.py  example_evolaa_zero.py  example_exp_potential.py  example_fit_bao_sdss_dr16.py  example_fit_hz_data.py  example_fit_pantheon+.py  example_fit_snia.py  example_fit_snia_cov.py  example_funnel.py  example_galsel.py  example_halo_mass_function.py  example_hiprim.py  example_hiprim_Tmodes.py  example_hiprim_tensor_modes.py  example_integralnd.py  example_mpi.py  example_mpi_fit.py  example_neartree  example_neartree.c  example_no_pert.py  example_ode_spline.py  example_ps.py  example_qm.c  example_qm.py  example_recomb.py  example_rg_snia_bao.py  example_rosenbrock.py  (+25 more)
examples/model_mcmc/: Makefile.am  README  build_all.sh  curve_generate.c  nc_curve.c  nc_curve.h  nc_curve_linear.c  nc_curve_linear.h  (+2 more)
notebooks/: AdiabBouncePerturbation.ipynb  BounceVecPert.ipynb  CLMM_backend_comp.ipynb  DEADJOE  FisherMatrixExample.ipynb  Funnel.ipynb  HIPrimTutorial.ipynb  LRTvsFisher.ipynb  MagDustBounce.ipynb  Makefile.am  NC_CCL_Bocquet_Test.ipynb  NC_CCL_Bocquet_Test2.ipynb  NC_CCL_Colossus_density_profiles.ipynb  NC_CCL_Watson.ipynb  NC_CCL_mass_function.ipynb  NC_Colossus_density_profiles.ipynb  NumCosmoCCLTest.ipynb  Rosenbrock.ipynb  TestInterp.ipynb  VacuumStudy.ipynb  VacuumStudyAdiabatic.ipynb  cmp_cluster_ccl_numcosmo.ipynb  cosmology_tutorial.ipynb  generate_makefile.py  lrt_fm_with_sne_bao.ipynb
numcosmo/: Makefile  Makefile.am  NumCosmo-1.0.gir  NumCosmo-1.0.typelib  NumCosmoMath-1.0.gir  NumCosmoMath-1.0.typelib  build_cfg.h  build_cfg.h.in  config_extra.h  constants.txt  libnumcosmo.la  meson.build  nc_cbe.c  nc_cbe.h  nc_cbe.lo  nc_cbe_precision.c  nc_cbe_precision.h  nc_cbe_precision.lo  nc_constants.h  nc_data_bao.c  nc_data_bao.h  nc_data_bao_a.c  nc_data_bao_a.h  nc_data_bao_dv.c  nc_data_bao_dv.h  nc_data_bao_dvdv.c  nc_data_bao_dvdv.h  nc_data_bao_rdv.c  nc_data_bao_rdv.h  nc_data_cluster_ncount.c  nc_data_cluster_ncount.h  nc_data_cluster_poisson.c  nc_data_cluster_poisson.h  nc_data_cmb.c  nc_data_cmb.h  nc_data_cmb_dist_priors.c  nc_data_cmb_dist_priors.h  nc_data_cmb_shift_param.c  nc_data_cmb_shift_param.h  nc_data_dist_mu.c  (+114 more)
tests/: Makefile  Makefile.am  ccl_fixtures.py  fixtures_ccl.py  fixtures_xcor.py  meson.build  ncm_data_gauss_cov_mvnd.c  ncm_data_gauss_cov_mvnd.h  ncm_data_gauss_cov_test.c  ncm_data_gauss_cov_test.h  ncm_model_mvnd.c  ncm_model_mvnd.h  ncm_model_test.c  ncm_model_test.h  test_cluster_abundance_sampling.py  test_cluster_mass_selection.py  test_cosmology.py  test_nc_cbe.c  test_nc_ccl_NLPk.c  test_nc_ccl_Pk.c  test_nc_ccl_corr3D.c  test_nc_ccl_dist.c  test_nc_ccl_massfunc.c  test_nc_cluster_abundance.c  test_nc_cluster_pseudo_counts.c  test_nc_data_bao_dtr_dhr.c  test_nc_data_bao_dvdv.c  test_nc_data_bao_dvr_dtdh.c  test_nc_data_bao_rdv.c  test_nc_data_cluster_ncount.c  test_nc_data_cluster_ncounts_gauss.c  test_nc_data_cluster_wl.c  test_nc_data_cluster_wl_monte_carlo.c  test_nc_data_cluster_wll.c  test_nc_data_hubble.c  test_nc_density_profile_nfw.c  test_nc_distance.c  test_nc_galaxy_acf.c  test_nc_galaxy_sd_obs_redshift.c  test_nc_galaxy_sd_position.c  (+144 more)
tools/: Makefile  Makefile.am  cmb_maps  cmb_maps.c  darkenergy  darkenergy.c  data_cluster.c  data_cluster.h  de_options.c  de_options.h  gobj_itest  gobj_itest.c  mcat_analyze  mcat_analyze.c  mcat_calibrate_apes  mcat_join  mcat_join.c  mcat_plot_corner  mcat_trim_oob.c  meson.build  mset_gen  mset_gen.c  numcosmo  q-constant.c  q-linear.c  q-piecewise.c  quantum-gravity.c  recomb.c  savedata.c
(+3446 files in other folders)
